--- a/firetest/pom.xml
+++ b/firetest/pom.xml
@@ -26,6 +26,11 @@
 	  <artifactId>firebase-admin</artifactId>
 	  <version>5.2.0</version>
 	</dependency>
+	<dependency>
+	    <groupId>org.xerial</groupId>
+	    <artifactId>sqlite-jdbc</artifactId>
+	    <version>3.21.0.1</version>
+	</dependency>
   </dependencies>
   
   <build>
