--- a/firetest/www/bower.json
+++ b/firetest/www/bower.json
@@ -6,6 +6,8 @@
     "polymer": "Polymer/polymer#^2.0.0",
     "paper-input": "PolymerElements/paper-input#^2.0.0",
     "paper-button": "PolymerElements/paper-button#^2.0.0",
+    "paper-card": "PolymerElements/paper-card#^2.0.0",
+    
     "polymerfire": "^2.2.1"
   },
   "devDependencies": {
